--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<a href="https://public.tableau.com/app/profile/naveen.nani/viz/Ukbankcustomerdata_16820634864310/Dashboard1" class="image fit"><img src="images/bank customer data.png" alt="" /></a>
 									<p>Bank Customers Data analysis Dashboard.</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/naveen.nani/viz/Ukbankcustomerdata_16820634864310/Dashboard1"</a></li><a href="#" class="button">Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/naveen.nani/viz/Ukbankcustomerdata_16820634864310/Dashboard1"</a></li><a href="https://public.tableau.com/app/profile/naveen.nani/viz/Ukbankcustomerdata_16820634864310/Dashboard1" class="button">view Dashboard</a></li>
 									</ul>
 								</article>
 
