--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 								<article>
 									<header>
 
-										<h2><a href="#">Data Exploration in SQl<br />
+										<h2><a href="#">SHOPIFY MARKETING CLOUD INTEGRATION<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/NAVEENSFMC/Tableau_projects"> <a href="#" class="image fit"><img src="images/covid.jpg" alt="" /></a>
-									<p>Data Exploration of Covid 19 Dataset in SQl Server.</p>
+									<a href="https://github.com/NAVEENSFMC/Tableau_projects"> <a href="#" class="image fit"><img src="images/shopify-cloud-connector.jpg" alt="" /></a>
+									<p>ShopifY Marketing Cloud Integration works as a bridge between both platforms that helps to sync data. Users can easily integrate it with their Shopify e-store and Salesforce Marketing Cloud to sync data on a real-time basis. This integration enhances the features of CRM and eCommerce platforms. It works with the concept of a service-first approach. This helps users to manage their business easily..</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/NAVEENSFMC/Tableau_projects"><a href="#" class="button">Project under construction</a></li>
+										<li><a href="https://github.com/NAVEENSFMC/Tableau_projects"><a href="https://drive.google.com/file/d/1kfTDHGBdvc1EC_nVAQJYHrgw-gAPwOW3/view?usp=sharing" class="button">VIEW FOR DETAIL EXPLANATION</a></li>
 									</ul>
 								</article>
 								<article>
