sfdc connect sfmc

--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
 									</ul>
 								</article>
 								<article>
+									<header>
+
+										<h2><a href="#">SFDC to MARKETING CLOUD Connect<br />
+										</a></h2>
+									</header>
+									<a href="https://github.com/NAVEENSFMC/Tableau_projects"> <a href="#" class="image fit"><img src="images/SFMCconnect.jpg" alt="" /></a>
+									<p>With Marketing Cloud Connect you are fully connected across the Salesforce Customer Success Platform, and part of a complete CRM. This is what gives you access to all of your customer data in Salesforce, not just marketing, but sales and service, every touch point, bringing in data seamlessly from across all the parts of the customer success platform.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/NAVEENSFMC/Tableau_projects"><a href="https://drive.google.com/file/d/1-onZzSuATufsCTUo8W8h3O_R-D_ObpQ9/view?usp=sharing" class="button">VIEW FOR DETAIL EXPLANATION</a></li>
+									</ul>
+								</article>
+								<article>
 									<header>	
 										<h2><a href="#">Tableau Dashboards<br />
 										</a></h2>
